Get basic builders to work
Co-authored-by: Charlie Clift <Bangboom030518@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "html-builder"
 version = "0.1.0"
 edition = "2021"
+bin = "generator"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
