--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ bin = "generator"
 [dependencies]
 itertools = "0.11"
 html-escape = "0.2"
+hyper = { version = "1.4.1", features = ["full"] }
+http-body-util = "0.1.2"
 
 [workspace]
 members = ["generator"]
